# libbtree

./: .gitignore  CMakeLists.txt
src/: btree.c  btree.h
tests/: CMakeLists.txt  common.c  common.h  creation.c  foreach.c  remove.c  root_remove.c
